fixed spacing for account tabs mobile

--- a/css/templater.css
+++ b/css/templater.css
@@ -614,7 +614,7 @@ input[type="file"] {
   .tab select { width:3rem; }
   #year-select { width: 4rem; }
   .window { width: 100%; }
-  #field6 { margin-bottom: 8rem;}
+  .last { margin-bottom: 8rem;}
 }
 /* Tablet Specific */
 @media screen and (min-width:700px) and (max-width:912px) {
